--- a/ClassLibrary/ClassLibrary.csproj
+++ b/ClassLibrary/ClassLibrary.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsCar.cs" />
+    <Compile Include="clsCarCollection.cs" />
     <Compile Include="clsDataConnection.cs" />
+    <Compile Include="clsSUPuser.cs" />
     <Compile Include="ClsUser.cs" />
     <Compile Include="ClsUsersCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
