--- a/Testing6/Testing6.csproj
+++ b/Testing6/Testing6.csproj
@@ -51,6 +51,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="tstCar.cs" />
+    <Compile Include="tstCarCollection.cs" />
+    <Compile Include="tstSupuser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
